--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ scikit-learn>=1.3.0
 scipy>=1.11.0
 pandas>=2.0.0
 matplotlib>=3.7.0
+streamlit>=1.28.0
+plotly>=5.17.0
 gradio>=3.50.0
 tensorboard>=2.14.0
 tqdm
